add topbar for tabler view

--- a/index.html
+++ b/index.html
@@ -42,33 +42,54 @@
               <a href="#" class="link-sidebar"><i class="icon-postback icon-sidebar"></i>Postback</a>
             </li>
           </ul>
-        </div>  
+        </div>
         <div class="chat">
           <h3 class="title manager-title">YOUR MANAGER</h3>
           <div class="manager">
             <img src="https://cdn2.iconfinder.com/data/icons/avatar-2/512/billy_heat_face-512.png" alt="manager's face">
-            <span class="green-dot"></span>
+            <span class="green-dot">&#11044</span>
             <span>Mikhael E.</span>
+          </div>
+        </div>
+        <div class="topbar-media">
+          <div class="money-wrapper topnav-element">
+            <i class="icons icon-topnav icon-wallet"></i>
+            <span class="topnav-text">$1,500.00</span>
+            <i class="icon icon-arrow-down"></i>
+          </div>
+          <div class="notification-wrapper topnav-element">
+            <i class="icons icon-topnav icon-notification"></i>
+            <span class="notification-text topnav-text">Notification</span>
+            <span class="orange-dot">&#11044</span>
+          </div>
+          <div class="profile-wrapper topnav-element">
+            <i class="icons icon-topnav icon-profile"></i>
+            <span class="topnav-text">Leonardo DiCaprio</span>
+          </div>
+          <div class="quit-wrapper topnav-element">
+            <i class="icons icon-topnav icon-quit"></i>
+            <span class="logout-text topnav-text">Log out</span>
           </div>
         </div>
       </div>
 
       <div class= "main-container">
         <div class="topbar">
-          <div class="money-wrapper topnav-element-before">
+          <div class="money-wrapper topnav-element">
             <i class="icons icon-topnav icon-wallet"></i>
             <span class="topnav-text">$1,500.00</span>
             <i class="icon icon-arrow-down"></i>
           </div>
-          <div class="notification-wrapper topnav-element-before">
+          <div class="notification-wrapper topnav-element">
             <i class="icons icon-topnav icon-notification"></i>
             <span class="notification-text topnav-text">Notification</span>
+            <span class="orange-dot">&#11044</span>
           </div>
-          <div class="profile-wrapper topnav-element-before">
+          <div class="profile-wrapper topnav-element">
             <i class="icons icon-topnav icon-profile"></i>
             <span class="topnav-text">Leonardo DiCaprio</span>
           </div>
-          <div class="quit-wrapper topnav-element-before">
+          <div class="quit-wrapper topnav-element">
             <i class="icons icon-topnav icon-quit"></i>
             <span class="logout-text topnav-text">Log out</span>
           </div>
