add minor changes

--- a/index.html
+++ b/index.html
@@ -261,6 +261,17 @@
         </div>
       </div>
     </div>
+    <div class="overlay" id="overlay">
+      <!--modal-->
+      <div class="modal" id="myModal">
+        <div class="btn-close js--close-modal">x</div>
+
+        <h4>Witaj w modalu!</h4>
+        <p>Lorem ipsum dolor sit amet...</p>
+
+        <button class="js--close-modal">Okay</button>
+      </div>
+    </div>
     <script src="js/script.js"></script>
   </body>
 </html>
